--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,7 @@
-Hello World
+{% extends "base.html" %}
+{% block content %}
+<div class="jumbotron">
+  <h1>Stay</h1>
+  <p>The question</p>
+</div>
+{% endblock %}
