--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>QandU - The question-and-answer website for QU students</title>
+    <title>EatsReview - The website for food review</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
   <link href="{% static "css/base.css" %}" rel="stylesheet">
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-              <a href="/" class="navbar-brand">QandU</a>
+              <a href="/" class="navbar-brand">EatsReview</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -23,7 +23,11 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#">Home</a></li>
+                {% if user.is_authenticated %}
+                  <li><a href="{% url 'auth_logout' %}">Logout</a></li>
+                {% else %}
+                  <li><a href="{% url 'auth_login' %}">Login</a></li>
+                {% endif %}
                 </ul>
             </div>
         </div>
