--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -4,4 +4,7 @@
 <p>{{ question.order }}</p>
 <p>{{ question.review }}</p>
 <p>Asked by {{ question.user.username }} on {{ question.created_at }}</p>
+{% if question.user == user %}
+<p><a href="{% url 'question_update' pk=question.id %}">Edit review</a></p>
+{% endif %}
 {% endblock %}
