--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -8,4 +8,14 @@
 <p><a href="{% url 'question_update' pk=question.id %}">Edit review</a></p>
 <p><a href="{% url 'question_delete' pk=question.id %}">Delete review</a></p>
 {% endif %}
+{% if answers.count > 0 %}
+<h3>{{ answers.count }} Comment{{ answers.count|pluralize }}:</h3>
+{% endif %}
+{% for answer in answers %}
+<div class="panel">
+    <p>{{ answer.text }}</p>
+    <p>comment by {{ answer.user.username }} on {{ answer.created_at }}</p>
+</div>
+{% endfor %}
+<p><a href="{% url 'answer_create' pk=question.id %}">Write comment</a></p>
 {% endblock %}
