--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -14,6 +14,9 @@
 {% for answer in answers %}
 <div class="panel">
     <p>{{ answer.text }}</p>
+    {% if answer.user == user %}
+    <p><a href="{% url 'answer_update' question_pk=question.id answer_pk=answer.id %}">Edit comment</a></p>
+    {% endif %}
     <p>comment by {{ answer.user.username }} on {{ answer.created_at }}</p>
 </div>
 {% endfor %}
