--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -16,6 +16,7 @@
     <p>{{ answer.text }}</p>
     {% if answer.user == user %}
     <p><a href="{% url 'answer_update' question_pk=question.id answer_pk=answer.id %}">Edit comment</a></p>
+    <p><a href="{% url 'answer_delete' question_pk=question.id answer_pk=answer.id %}">Delete comment</a></p>
     {% endif %}
     <p>comment by {{ answer.user.username }} on {{ answer.created_at }}</p>
 </div>
