--- a/templates/question/question_detail.html
+++ b/templates/question/question_detail.html
@@ -3,7 +3,7 @@
 <h1>{{ question.restaurant }}</h1>
 <p>{{ question.order }}</p>
 <p>{{ question.review }}</p>
-<p>Asked by {{ question.user.username }} on {{ question.created_at }}</p>
+<p>Reviewed by <a href="{% url 'user_detail' slug=question.user.username %}">{{ question.user.username }}</a> on {{ question.created_at }}</p>
 {% if question.user == user %}
 <p><a href="{% url 'question_update' pk=question.id %}">Edit review</a></p>
 <p><a href="{% url 'question_delete' pk=question.id %}">Delete review</a></p>
@@ -18,7 +18,7 @@
     <p><a href="{% url 'answer_update' question_pk=question.id answer_pk=answer.id %}">Edit comment</a></p>
     <p><a href="{% url 'answer_delete' question_pk=question.id answer_pk=answer.id %}">Delete comment</a></p>
     {% endif %}
-    <p>comment by {{ answer.user.username }} on {{ answer.created_at }}</p>
+    <p>Comment by <a href="{% url 'user_detail' slug=answer.user.username %}">{{ answer.user.username }}</a> on {{ answer.created_at }} ({{ answer.vote_set.all.count }} Vote{{ answer.vote_set.all.count|pluralize }})</p>
 </div>
 {% endfor %}
 <p><a href="{% url 'answer_create' pk=question.id %}">Write comment</a></p>
