--- a/templates/question/question_list.html
+++ b/templates/question/question_list.html
@@ -3,7 +3,7 @@
 {% for question in object_list %}
 <div class="panel">
     <h3><a href="{{ question.get_absolute_url }}">{{ question.restaurant }}</a></h3>
-    <p>Reviewed by {{ question.user.username }} on {{ question.created_at }}</p>
+    <p>Reviewed by <a href="{% url 'user_detail' slug=question.user.username %}">{{ question.user.username }}</a> on {{ question.created_at }}</p>
     <p>{{ question.vote_set.all.count }} Like{{ question.vote_set.all.count|pluralize }}</p>
 <form method="post" action="{% url 'vote' %}">
     {% csrf_token %}
